# emotion_detection_service

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: nlp_config.json  server_config.json
docs/: architecture.md  preprocessing.md
ml/: fine_tuning_bert.ipynb  requirements.txt  training_classical_model.ipynb
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/include/nlp/model/: IModel.hpp  ONNXModel.hpp
src/include/nlp/pipeline/: NLPPipeline.hpp
src/include/nlp/preprocessing/: ClassicalPreprocessor.hpp  IPreprocessor.hpp  Preprocessor.hpp  TransformerPreprocessor.hpp
src/include/nlp/utils/: LabelMapper.hpp  Normalization.hpp
src/include/service/: EmotionService.hpp  emotion_service.hpp
src/include/utils/: ConfigReader.hpp
src/nlp/: CMakeLists.txt
src/nlp/model/: ONNXModel.cpp
src/nlp/pipeline/: NLPPipeline.cpp
src/nlp/preprocessing/: ClassicalPreprocessor.cpp  Preprocessor.cpp
src/protos/: emotion_service.proto
src/service/: CMakeLists.txt  EmotionService.cpp  emotion_service.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_full_nlp_pipeline.cpp  test_model_mapper.cpp  test_preprocess_model.cpp  test_service.cpp
tests/unit/: CMakeLists.txt  test_classical_preprocessor.cpp  test_label_mapper.cpp  test_onnx_model.cpp  test_preprocessor.cpp
